--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-server",
   "version": "1.0.0",
   "description": "paquete para crear lista de tarea en node.js",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
