--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node-server",
   "version": "1.0.0",
   "description": "paquete para crear lista de tarea en node.js",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/VictorSuarez0507/node-server#readme",
   "dependencies": {
     "chalk": "^5.3.0",
+    "nodemon": "^3.0.1",
     "readline": "^1.3.0"
   }
 }
